--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ p {font-size: 16px;}
 }
 
 .bg-2 { 
-    background-color: #c5cfe6; /* Dark Blue */
+    background-color: #474e5d; /* Dark Blue */
     color: #ffffff;
 }
   
